// Vitest Snapshot v1

exports[`Appium launcher > onPrepare > should set correct config properties for Windows 1`] = `
[
  "/c",
  "path/to/my_custom_appium",
  "--base-path",
  "/",
  "--foo",
  "bar",
]
`;

exports[`Appium launcher > onPrepare > should set correct config properties for linux 1`] = `
[
  "--base-path",
  "/",
  "--foo",
  "bar",
]
`;

exports[`Appium launcher > onPrepare > should set correct config properties for mac 1`] = `
[
  "--base-path",
  "/",
  "--foo",
  "bar",
]
`;
